--- a/archives/toutiao-search/2024-04-01.md
+++ b/archives/toutiao-search/2024-04-01.md
@@ -1,46 +1,68 @@
 # 2024-04-01
 
-共 96 条
+共 117 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 01 2024 08:29:12 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Apr 01 2024 09:47:39 GMT+0800 (China Standard Time) -->
 1. [成都一迈巴赫连撞多人致2死2伤](https://so.toutiao.com/search?keyword=成都一迈巴赫连撞多人致2死2伤)
 1. [疑似主播上台相亲被王婆劝下台](https://so.toutiao.com/search?keyword=疑似主播上台相亲被王婆劝下台)
 1. [既是正能量又是大流量](https://so.toutiao.com/search?keyword=既是正能量又是大流量)
 1. [巴黎市长称奥运会不欢迎俄白运动员](https://so.toutiao.com/search?keyword=巴黎市长称奥运会不欢迎俄白运动员)
+1. [房东索赔上万租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万租客赔四千合理吗)
+1. [老人晨练打球被指扰民保安躺地阻止](https://so.toutiao.com/search?keyword=老人晨练打球被指扰民保安躺地阻止)
 1. [小米汽车副总裁回应陈震删雷军合影](https://so.toutiao.com/search?keyword=小米汽车副总裁回应陈震删雷军合影)
-1. [采耳店收入2千被罚22万 强执申请撤回](https://so.toutiao.com/search?keyword=采耳店收入2千被罚22万+强执申请撤回)
-1. [王婆说媒下午场改晚上：怕你们受罪](https://so.toutiao.com/search?keyword=王婆说媒下午场改晚上：怕你们受罪)
-1. [男子发酒疯被老婆三耳光打回现实](https://so.toutiao.com/search?keyword=男子发酒疯被老婆三耳光打回现实)
-1. [周鸿祎：小米汽车为什么叫SU7](https://so.toutiao.com/search?keyword=周鸿祎：小米汽车为什么叫SU7)
-1. [女子回应新婚丈夫找王婆说媒：将离婚](https://so.toutiao.com/search?keyword=女子回应新婚丈夫找王婆说媒：将离婚)
-1. [男子车位多次被占后用焊条封堵](https://so.toutiao.com/search?keyword=男子车位多次被占后用焊条封堵)
-1. [黄山辟谣“天都峰4月1日开放”](https://so.toutiao.com/search?keyword=黄山辟谣“天都峰4月1日开放”)
+1. [4月大外孙17斤姥姥嫌太瘦了](https://so.toutiao.com/search?keyword=4月大外孙17斤姥姥嫌太瘦了)
 1. [开封王婆：说媒现在变味了](https://so.toutiao.com/search?keyword=开封王婆：说媒现在变味了)
-1. [俄黑海舰队或已损失三分之一战舰](https://so.toutiao.com/search?keyword=俄黑海舰队或已损失三分之一战舰)
-1. [男子街头被陌生女子追抱：已报警](https://so.toutiao.com/search?keyword=男子街头被陌生女子追抱：已报警)
-1. [男子王婆说媒相亲走红后妻子现身](https://so.toutiao.com/search?keyword=男子王婆说媒相亲走红后妻子现身)
-1. [爸爸穿得太显眼把女儿气哭](https://so.toutiao.com/search?keyword=爸爸穿得太显眼把女儿气哭)
-1. [专家：原院长骗学生当小三处理过轻](https://so.toutiao.com/search?keyword=专家：原院长骗学生当小三处理过轻)
-1. [央视评王婆说媒走红](https://so.toutiao.com/search?keyword=央视评王婆说媒走红)
+1. [周鸿祎：小米汽车为什么叫SU7](https://so.toutiao.com/search?keyword=周鸿祎：小米汽车为什么叫SU7)
+1. [男子发酒疯被老婆三耳光打回现实](https://so.toutiao.com/search?keyword=男子发酒疯被老婆三耳光打回现实)
+1. [黄山辟谣“天都峰4月1日开放”](https://so.toutiao.com/search?keyword=黄山辟谣“天都峰4月1日开放”)
+1. [王婆说媒下午场改晚上：怕你们受罪](https://so.toutiao.com/search?keyword=王婆说媒下午场改晚上：怕你们受罪)
+1. [詹姆斯40+7+5 湖人116-104篮网](https://so.toutiao.com/search?keyword=詹姆斯40+7+5+湖人116-104篮网)
+1. [采耳店收入2千被罚22万 强执申请撤回](https://so.toutiao.com/search?keyword=采耳店收入2千被罚22万+强执申请撤回)
+1. [新能源车一年跑2万公里以上被拒保](https://so.toutiao.com/search?keyword=新能源车一年跑2万公里以上被拒保)
 1. [6人因“咸猪手”引发斗殴均被控制](https://so.toutiao.com/search?keyword=6人因“咸猪手”引发斗殴均被控制)
+1. [陆军首次增派女兵参赛队赴俄参赛](https://so.toutiao.com/search?keyword=陆军首次增派女兵参赛队赴俄参赛)
+1. [围观开封王婆说媒现场](https://so.toutiao.com/search?keyword=围观开封王婆说媒现场)
+1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
+1. [5岁男童身亡 爷爷后悔没争抚养权](https://so.toutiao.com/search?keyword=5岁男童身亡+爷爷后悔没争抚养权)
+1. [特斯拉Model Y全系涨价5000元](https://so.toutiao.com/search?keyword=特斯拉Model+Y全系涨价5000元)
+1. [男子王婆说媒相亲走红后妻子现身](https://so.toutiao.com/search?keyword=男子王婆说媒相亲走红后妻子现身)
+1. [俄要求乌逮捕并引渡参与恐袭人员](https://so.toutiao.com/search?keyword=俄要求乌逮捕并引渡参与恐袭人员)
+1. [男子街头被陌生女子追抱：已报警](https://so.toutiao.com/search?keyword=男子街头被陌生女子追抱：已报警)
+1. [女子回应新婚丈夫找王婆说媒：将离婚](https://so.toutiao.com/search?keyword=女子回应新婚丈夫找王婆说媒：将离婚)
 1. [13岁女孩称帮同学取快递已失踪7天](https://so.toutiao.com/search?keyword=13岁女孩称帮同学取快递已失踪7天)
+1. [俄称恐袭事件为乌策划 乌方驳斥](https://so.toutiao.com/search?keyword=俄称恐袭事件为乌策划+乌方驳斥)
+1. [男子车位多次被占后用焊条封堵](https://so.toutiao.com/search?keyword=男子车位多次被占后用焊条封堵)
+1. [专家：原院长骗学生当小三处理过轻](https://so.toutiao.com/search?keyword=专家：原院长骗学生当小三处理过轻)
 1. [律师评奔驰加塞事件：视为正当防卫](https://so.toutiao.com/search?keyword=律师评奔驰加塞事件：视为正当防卫)
-1. [海口一男子疑酒后调戏妇女被群殴](https://so.toutiao.com/search?keyword=海口一男子疑酒后调戏妇女被群殴)
-1. [广州塔为何总被闪电击中](https://so.toutiao.com/search?keyword=广州塔为何总被闪电击中)
+1. [爸爸穿得太显眼把女儿气哭](https://so.toutiao.com/search?keyword=爸爸穿得太显眼把女儿气哭)
+1. [问界新M7入门款车型降价2万](https://so.toutiao.com/search?keyword=问界新M7入门款车型降价2万)
+1. [村医给卖淫女看病被判刑为何引争议](https://so.toutiao.com/search?keyword=村医给卖淫女看病被判刑为何引争议)
 1. [岳阳暴雨后桥洞发现一具尸体](https://so.toutiao.com/search?keyword=岳阳暴雨后桥洞发现一具尸体)
-1. [哈兰德错失良机 阿森纳0-0曼城](https://so.toutiao.com/search?keyword=哈兰德错失良机+阿森纳0-0曼城)
+1. [雪姨王琳53岁活动状态](https://so.toutiao.com/search?keyword=雪姨王琳53岁活动状态)
 1. [媒体评被教授性侵学生答辩完才举报](https://so.toutiao.com/search?keyword=媒体评被教授性侵学生答辩完才举报)
-1. [小米汽车高管：掌握SU7被抹黑证据](https://so.toutiao.com/search?keyword=小米汽车高管：掌握SU7被抹黑证据)
+1. [詹姆斯生涯第672次砍30+成历史第一](https://so.toutiao.com/search?keyword=詹姆斯生涯第672次砍30+成历史第一)
+1. [乌克兰基辅拉响防空警报](https://so.toutiao.com/search?keyword=乌克兰基辅拉响防空警报)
+1. [胡锡进谈孟买亿万富豪数量首超北京](https://so.toutiao.com/search?keyword=胡锡进谈孟买亿万富豪数量首超北京)
+1. [广州塔为何总被闪电击中](https://so.toutiao.com/search?keyword=广州塔为何总被闪电击中)
+1. [海空卫士王伟牺牲二十三周年](https://so.toutiao.com/search?keyword=海空卫士王伟牺牲二十三周年)
+1. [巴勒斯坦新政府宣誓就职](https://so.toutiao.com/search?keyword=巴勒斯坦新政府宣誓就职)
 1. [舞蹈演员找王婆说媒被网友夸有气质](https://so.toutiao.com/search?keyword=舞蹈演员找王婆说媒被网友夸有气质)
+1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
+1. [夏威夷不受北约集体防御“保护”](https://so.toutiao.com/search?keyword=夏威夷不受北约集体防御“保护”)
+1. [《追风者》收视率再创新高](https://so.toutiao.com/search?keyword=《追风者》收视率再创新高)
+1. [海口一男子疑酒后调戏妇女被群殴](https://so.toutiao.com/search?keyword=海口一男子疑酒后调戏妇女被群殴)
+1. [小米1天卖出北汽新能源1年销量](https://so.toutiao.com/search?keyword=小米1天卖出北汽新能源1年销量)
+1. [黄冈王婆说媒现场人山人海](https://so.toutiao.com/search?keyword=黄冈王婆说媒现场人山人海)
+1. [俄黑海舰队或已损失三分之一战舰](https://so.toutiao.com/search?keyword=俄黑海舰队或已损失三分之一战舰)
+1. [央视评王婆说媒走红](https://so.toutiao.com/search?keyword=央视评王婆说媒走红)
+1. [哈兰德错失良机 阿森纳0-0曼城](https://so.toutiao.com/search?keyword=哈兰德错失良机+阿森纳0-0曼城)
+1. [小米汽车高管：掌握SU7被抹黑证据](https://so.toutiao.com/search?keyword=小米汽车高管：掌握SU7被抹黑证据)
 1. [一个富二代留学生被家里断供一年后](https://so.toutiao.com/search?keyword=一个富二代留学生被家里断供一年后)
 1. [乌称若夺回开战后被占领土将愿和谈](https://so.toutiao.com/search?keyword=乌称若夺回开战后被占领土将愿和谈)
 1. [凯迪拉克回应海报疑似暗讽小米SU7](https://so.toutiao.com/search?keyword=凯迪拉克回应海报疑似暗讽小米SU7)
 1. [疑被打死男童的生母与男友被刑拘](https://so.toutiao.com/search?keyword=疑被打死男童的生母与男友被刑拘)
-1. [《追风者》收视率再创新高](https://so.toutiao.com/search?keyword=《追风者》收视率再创新高)
-1. [小米1天卖出北汽新能源1年销量](https://so.toutiao.com/search?keyword=小米1天卖出北汽新能源1年销量)
 1. [印尼当选总统为何首访选择中国](https://so.toutiao.com/search?keyword=印尼当选总统为何首访选择中国)
-1. [黄冈王婆说媒现场人山人海](https://so.toutiao.com/search?keyword=黄冈王婆说媒现场人山人海)
 1. [举报鸿茅药酒男子：生命进入倒计时](https://so.toutiao.com/search?keyword=举报鸿茅药酒男子：生命进入倒计时)
 1. [小米汽车：首保费用480元](https://so.toutiao.com/search?keyword=小米汽车：首保费用480元)
 1. [岳阳强降雨致房屋倒塌 一老人遇难](https://so.toutiao.com/search?keyword=岳阳强降雨致房屋倒塌+一老人遇难)
@@ -48,7 +70,6 @@
 1. [油价调整将于4月1日24时开启](https://so.toutiao.com/search?keyword=油价调整将于4月1日24时开启)
 1. [破地机早七开进高校宿舍楼](https://so.toutiao.com/search?keyword=破地机早七开进高校宿舍楼)
 1. [海口一地发生群体斗殴？警方回应](https://so.toutiao.com/search?keyword=海口一地发生群体斗殴？警方回应)
-1. [胡锡进谈孟买亿万富豪数量首超北京](https://so.toutiao.com/search?keyword=胡锡进谈孟买亿万富豪数量首超北京)
 1. [《今天的她们》佘诗曼毒舌开挂](https://so.toutiao.com/search?keyword=《今天的她们》佘诗曼毒舌开挂)
 1. [盗贼欲偷外卖车 上车瞬间被撂倒](https://so.toutiao.com/search?keyword=盗贼欲偷外卖车+上车瞬间被撂倒)
 1. [网友用无人机发现老人点燃茅草丛](https://so.toutiao.com/search?keyword=网友用无人机发现老人点燃茅草丛)
